--- a/css/default-edit.css
+++ b/css/default-edit.css
@@ -362,7 +362,7 @@
 .nice-input-nav__item h4 {
     font-size: 16px;
     font-weight: 500;
-    color: #e2e8f0;
+    color: var(--color-p);
 }
 
 .nice-input-box-1 {
@@ -378,16 +378,19 @@
     align-items: center;
     justify-content: center;
     text-align: center;
-    border: 1px solid #334155;
+    border: 1px solid #33415583;
     border-radius: 50%;
     background: transparent;
-    color: #e2e8f0c2;
+    color: var(--color-p);
     font-weight: 200;
+}
+.nice-input-box-1 .button:hover {
+    border-color: #334155;
 }
 .nice-input-box-1 .input {
     width: 25px;
     font-size: 16px;
-    color: #e2e8f0;
+    color: var(--color);
     background: transparent;
     text-align: center;
     border: none;
